--- a/absolute.html
+++ b/absolute.html
@@ -15,7 +15,6 @@
         margin: 0;
         font-family: sans-serif;
         font-weight: 600;
-        height: 0;
       }
 
       header,
@@ -40,6 +39,7 @@
         left: 0;
         width: 140px;
         bottom: 100px;
+        height: 300px;
         background: #ef4444;
       }
 
@@ -48,6 +48,7 @@
         right: 0;
         width: 140px;
         bottom: 100px;
+        height: 300px;
         background: #eab308;
       }
 
@@ -56,11 +57,12 @@
         left: 140px;
         right: 140px;
         bottom: 100px;
+        height: 300px;
         background: #ddd;
       }
 
       footer {
-        bottom: 0;
+        bottom: 430px;
         left: 0;
         width: 100%;
         height: 100px;
