--- a/absolute.html
+++ b/absolute.html
@@ -15,6 +15,8 @@
         margin: 0;
         font-family: sans-serif;
         font-weight: 600;
+        min-height: 460px;
+        position: relative;
       }
 
       header,
@@ -22,51 +24,52 @@
       main,
       aside,
       footer {
-        position: absolute;
         padding: 0.5rem;
       }
 
       header {
+        background: #22c55e;
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 60px;
-        background: #22c55e;
       }
 
       nav {
+        background: #ef4444;
+        position: absolute;
         top: 60px;
         left: 0;
-        width: 140px;
-        bottom: 100px;
+        width: 150px;
         height: 300px;
-        background: #ef4444;
-      }
-
-      aside {
-        top: 60px;
-        right: 0;
-        width: 140px;
-        bottom: 100px;
-        height: 300px;
-        background: #eab308;
       }
 
       main {
-        top: 60px;
-        left: 140px;
-        right: 140px;
-        bottom: 100px;
-        height: 300px;
         background: #ddd;
+        position: absolute;
+        top: 60px;
+        left: 150px;
+        width: calc(100% - 300px);
+        height: 300px;
+      }
+
+      aside {
+        background: #eab308;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        width: 150px;
+        height: 300px;
       }
 
       footer {
-        bottom: 430px;
+        background: #8b5cf6;
+        position: absolute;
+        top: 360px;
         left: 0;
         width: 100%;
         height: 100px;
-        background: #8b5cf6;
       }
     </style>
   </head>
