--- a/grid-cords.html
+++ b/grid-cords.html
@@ -15,11 +15,10 @@
         margin: 0;
         font-family: sans-serif;
         font-weight: 600;
-
+        min-height: 460px;
         display: grid;
-        grid-template-columns: 1fr 3fr 1fr;
-        grid-template-rows: auto 1fr auto;
-        height: 460px;
+        grid-template-columns: 150px 1fr 150px;
+        grid-template-rows: 60px 300px 100px;
       }
 
       header,
@@ -32,9 +31,8 @@
 
       header {
         background: #22c55e;
-        grid-column: 1 / 4;
+        grid-column: 1 / -1;
         grid-row: 1;
-        height: 60px;
       }
 
       nav {
@@ -57,9 +55,8 @@
 
       footer {
         background: #8b5cf6;
-        grid-column: 1 / 4;
+        grid-column: 1 / -1;
         grid-row: 3;
-        height: 100px;
       }
     </style>
   </head>
